fixed horizontal overflow issues in small screens

--- a/Home/static/css/index.css
+++ b/Home/static/css/index.css
@@ -18,6 +18,7 @@ body {
     background: #1d1d1d;
     font-family: Poppins, sans-serif;
     color: white;
+    overflow-x: hidden;
 }
 
 a { 
